# LLabVolumeBackupTool

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  LLabVolumeBackuper.icns  MacOSXBundleInfo.plist.in  README.md  buildMakefile_copy  main.cpp
gui/: mainwindow.cpp  mainwindow.h  mainwindow.ui  settingsdialog.cpp  settingsdialog.h  settingsdialog.ui  volumeswidget.cpp  volumeswidget.h  volumeswidget.ui
lib/: filemanager.cpp  filemanager.h  volumemanager.h
resources/: icons.qrc
tst/: catch.hpp  catch_filemanager.cpp  main.cpp
